# smart-onboarding-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database.py  emails.py  models.py  pyproject.toml  render.yaml  requirements.txt  server.py  utils.py
app/: auth.py  auth_jwt.py  chat_context.py  chat_deps.py  db_migrate.py  deps.py  dev_seed_employees.py  main.py  openai_tools.py  openrouter_chat.py  passwords.py  portal_seed.py  schemas.py  schemas_data.py  tool_dispatch.py
app/routers/: data_crud.py  portal_auth.py  portal_data.py
frontend/: .env.example  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  DataConsole.tsx  EmployeeDashboard.tsx  HrDashboard.tsx  LoginForm.tsx  OnboardingWizard.tsx
frontend/src/context/: PortalSessionContext.tsx
hrms/: atom_email.py  data_admin_service.py  employee_manager.py  leave_manager.py  leave_request_service.py  manager_manager.py  meeting_manager.py  schemas.py  ticket_manager.py  ticket_notifications.py  tools_impl.py
scripts/: run-web.sh
services/: __init__.py  chat_memory.py  onboarding_service.py
