[project]
name = "atliq-hr-assist"
version = "0.2.0"
description = "HR Automation MCP Agent with PostgreSQL backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.25.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "certifi>=2024.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.40.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
]